hinted refactor