@@ -6,8 +6,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestWriter {
     @Test
@@ -20,10 +19,10 @@ public class TestWriter {
             WriterInterface writer = Writer.NEW_WRITE(pathString);
             writer.write(input);
             try {
-                String actual = new String(Files.readAllBytes(Path.of(pathString)), StandardCharsets.UTF_8);
+                String actual = Files.readString(Path.of(pathString));
                 assertEquals(input, actual);
             } catch (Exception err) {
-                assertTrue(false, "Read operation error.");
+                fail("Read operation error.");
             }
 
         }
